fix overflow subpath name in header

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,3 +9,7 @@
 .header *::after {
   color: var(--color-header-logo);
 }
+
+.breadcrumbItem {
+  font-family: "Nanum Gothic Coding", monospace;
+}
